2008-12-07  Ulrich Drepper  <drepper@redhat.com>

	* resolv/res_send.c (send_dg): Use correct guards for SOCK_CLOEXEC
	use.

	* sysdeps/unix/sysv/linux/kernel-features.h: Fix typo in accept4
	handling.

	* resolv/res_init.c (__res_vinit): Always assign to statp->nscount
	after reading name server list.

	* nis/nss_nis/nis-hosts.c (_nss_nis_gethostbyname4_r): Fix memory
	handling for host name aliases.

2008-11-24  Arkadiusz Miśkiewicz  <arekm@maven.pl>

	* sysdeps/i386/dl-tlsdesc.S (_dl_tlsdesc_dynamic): Use LOAD_PIC_REG
	instead of doing things manually.

2008-11-26  Chris Steel  <chris.steel.lnx@googlemail.com>

	* posix/regex_internal.h (build_wcs_upper_buffer):
	Return type is reg_error_t.

2008-12-05  Ulrich Drepper  <drepper@redhat.com>

	* posix/globtest.sh: Use mktemp to create temporary file and
	directory.

	* sysdeps/unix/sysv/linux/bits/sched.h (__CPU_SET_S): Handle large
	sets correctly.
	(__CPU_CLR_S): Likewise.
	(__CPU_ISSET_S): Likewise.

2008-12-05  Joseph Myers  <joseph@codesourcery.com>
	    Ulrich Drepper  <drepper@redhat.com>

	* scripts/firstversion.awk: Use custom comparison function to compare
	version numbers.
	* scripts/versions.awk: Use sort invocation which can handle
	multi-digit sub-version numbers.

2008-12-04  Ulrich Drepper  <drepper@redhat.com>

	* locale/programs/ld-address.c (DEFINE_LANGUAGE_CODE2): Define.
	* locale/iso-639.def: Add Chhattisgarhi entry.

2008-12-02  Ulrich Drepper  <drepper@redhat.com>

	* resolv/nss_dns/dns-host.c (_nss_dns_gethostbyname3_r): Recognize
	ESRCH return value.
	(_nss_dns_gethostbyname4_r): Likewise.
	* resolv/res_init.c (__res_vinit): Initialize nscount to zero.
	* sysdeps/posix/getaddrinfo.c (gaih_inet): In case we use
	gethostbyname4_r, we don't have a separate IPv6 status, so copy
	the no_data variable.

	* resolv/res_init.c (__res_vinit): Fill in IPv4 name server
	information at the correct index.

	* socket/sys/socket.h: Declare accept4.
	* socket/accept4.c: New file.